[package]
name = "yt-cli"
version = "0.3.2"
edition = "2021"
authors = ["Leo <leocerva29@gmail.com>"]
description = "Quick YouTube downloader CLI tool"
repository = "https://github.com/LeonardoCerv/yt-cli"
license = "MIT"
keywords = ["youtube", "downloader", "cli", "media"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
indicatif = "0.17"
colored = "2.0"
url = "2.4"
